syntax = "proto3";

import "./payment/message.proto";
import "./task/message.proto";

message EffectError {
  uint32 timestamp = 1;
  string message = 2;
  string code = 3;
}

message EffectAcknowledgment {
  uint32 timestamp = 1;
}

message EffectProtocolMessage {
  oneof message {
    Task task = 1;
    TaskAccepted task_accepted = 2;
    TaskRejected task_rejected = 3;
    TaskCompleted task_completed = 4;
    Payment payment = 5;
    PayoutRequest payout_request = 6;
    ProofRequest proof_request = 7;
    ProofResponse proof_response = 8;
    TemplateRequest template_request = 9;
    Template template_response = 10;
    EffectError error = 11;
    EffectAcknowledgment ack = 12;
  }
}
